--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1  id="who" class="mb-5 text-5xl font-bold text-white p-16 ">
         Who I'm?
     </h1>
-    <p class="text-white text-2xl pl-16  font-light">
+    <p class="text-white text-2xl sm:text-l pl-16 pr-16  font-light">
         I'm a Master student in Computer Science
 at the University of Rome "Tor Vergata". I'm
 focusing on AI, Machine Learning, Deep Learning,
@@ -68,7 +68,7 @@ challenges.
       <li class="step step-primary">2019 Start Master Degree</li>
       <li class="step step-success">2021 Master Degree</li>
     </ul>
-    <p class="text-white text-3xl pl-16 pt-8  font-bold">
+    <p class="text-white text-2xl pl-16 pt-8  pr-16 font-bold text-center">
       I ALSO LOVE PIZZA! 🍕🍕
         </p>
 </div>
@@ -206,7 +206,7 @@ challenges.
 
   <footer class="p-8">
     <div class="font-bold text-xl text-white text-center">
-    Samir Salman web site
+    Samir Salman 
     </div>
     <div class="font-light text-xl text-white text-center">
       2021
