--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ challenges.
       <li class="step step-success">2021 Master Degree</li>
     </ul>
     <p class="text-white text-2xl pl-16 pt-8  pr-16 font-bold text-center">
-      I ALSO LOVE PIZZA! 🍕🍕
+      🍕 I ALSO LOVE PIZZA! 🍕
         </p>
 </div>
 
