--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ challenges.
       <li class="step step-primary">2019 Start Master Degree</li>
       <li class="step step-success">2021 Master Degree</li>
     </ul>
-    <p class="text-white text-2xl pl-16 pt-8  pr-16 font-bold text-center">
+    <p class="container text-white text-2xl pl-16 pt-8  pr-16 font-bold text-center">
       🍕 I ALSO LOVE PIZZA! 🍕
         </p>
 </div>
