--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>Document</title>
+    <title>Samir Salman</title>
   </head>
   <body>
     <div
@@ -68,7 +68,7 @@ challenges.
       <li class="step step-primary">2019 Start Master Degree</li>
       <li class="step step-success">2021 Master Degree</li>
     </ul>
-    <p class="container text-white text-2xl pl-16 pt-8  pr-16 font-bold text-center">
+    <p class="container text-white text-2xl pl-8 pt-8  pr-8 font-bold text-center">
       🍕 I ALSO LOVE PIZZA! 🍕
         </p>
 </div>
