--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <title>Samir Salman</title>
   </head>
-  <body>
+  <body class="container mx-auto">
     <div
       class="hero min-h-screen"
       style="
@@ -193,6 +193,8 @@ challenges.
 
 </div>
 </div>
+ 
+<div class="divider"></div> 
 
 <div class="h-screen p-16 flex flex-wrap bg-blue-400">
   <h1  class="bg-text mb-5 text-5xl font-bold">
