--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
   </head>
   <body class="container mx-auto" onload="timer()">
+    <div id="bodyscroll">
     <script src="./script.js"></script>
 
     <div
-      class="hero min-h-screen"
+      class="section hero min-h-screen"
       style="
         background-image: url('https://svitla.com/uploads/0/3375-cloud_for_neural_networks_header.jpg');
       "
@@ -113,7 +114,7 @@ challenges.
 <div class="divider"></div> 
 
 
-<div class="container min-h-screen">
+<div class="section container min-h-screen">
   <h1  class="mb-5 text-5xl font-bold text-white pl-16 pt-16">
     Skills
 </h1>
@@ -163,7 +164,7 @@ challenges.
     <img src="https://image.flaticon.com/icons/png/512/977/977624.png">
   </figure> 
   <div class="justify-end card-body">
-    <h2 class="card-title">SQL and NoSQL knowladge</h2> 
+    <h2 class="card-title">SQL and NoSQL knowledge</h2> 
   </div>
   
 </div> 
@@ -174,7 +175,7 @@ challenges.
 <div class="divider"></div> 
 
 
-<div class="container ">
+<div class="section container ">
   <h1  class="mb-5 text-5xl font-bold text-white pl-16 pt-16">
     My Projects
 </h1>
@@ -273,7 +274,7 @@ challenges.
 <div class="divider"></div> 
 
 
-<div class="container">
+<div class="section container">
   <h1  class="mb-5 text-5xl font-bold text-white pl-16 pt-16">
     Contacts
 </h1>
@@ -333,7 +334,7 @@ challenges.
  
 <div class="divider"></div> 
 
-<div class="h-screen p-16 flex flex-wrap bg-blue-400">
+<div class="section h-screen p-16 flex flex-wrap bg-blue-400">
   <h1  class="bg-text mb-5 text-5xl font-bold">
     My twitter
 </h1>
@@ -341,7 +342,7 @@ challenges.
 </div>
 
 
-
+</div>
   </body>
   <div class="divider"></div> 
 
